--- a/libft/Makefile
+++ b/libft/Makefile
@@ -41,6 +41,7 @@ CHAR_OBJS = $(CHAR_SRCS:.c=.o)
 # String
 STRING_FOLDER = string/
 STRING_SRCS = \
+			ft_equals.c \
 			ft_joinstrs.c \
 			ft_split.c \
 			ft_str_array_len.c \
